# hallmark_sam

./: .gitignore  README.rst  encodings.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  documentation.yml
demo/: ParaFrame.ipynb  demo_bash.ipynb  demo_cache_1.ipynb  demo_datatree.ipynb  demo_index.ipynb  demo_python.ipynb
demos/: ParaFrame.ipynb  ParaFrame_dev.ipynb
demos/data/: .hallmark.yaml
doc/: conf.py  design.rst  index.rst  usecase.rst
mod/hallmark/: __init__.py  cache.py  cli.py  core.py  dothm.py  downloader.py  eht_datatree.py  error.py  fmt_detection.py  helper_functions.py  index.py  objects.py  paraframe.py  repo.py  repo_config.py  repo_manifest.py  repo_state.py  repo_worktree.py  state.py  worktree.py
test/: conftest.py  test_cli.py  test_downloader.py  test_eht_datatree.py  test_eht_datatree.py.old  test_fmt_detection.py  test_hallmark.py  test_paraframe_e2e.py
tests/: conftest.py  test_paraframe.py  test_paraframe_e2e.py
