#!/usr/bin/env python3
#
# Copyright 2019 Chi-kwan Chan
# Copyright 2019 Steward Observatory
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]

[project]
name = "hallmark"
dynamic = ["version"]
license = "Apache-2.0"
dependencies =[
    "numpy",
    "pandas",
    "parse",
]

[tool.setuptools.packages.find]
where = ["mod"]

[project.urls]
Homepage = "https://github.com/l6a/hallmark/"
Repository = "https://github.com/l6a/hallmark/"
Issues = "https://github.com/l6a/hallmark/issues"


[dependency-groups]
dev = [
    "pytest"
]
lint = [
    "ruff"
]

authors = [
    {name = "Chi-kwan Chan"},
    {name = "Nayera Abdessalam"},
    {name = "Hayden Marchinek"},
    {name = "Rohin Sant"},
    {name = "Ram Adithya"},
    {name = "Hayden Foote"},
]

description = "Reproducibility is the hallmark of the scientific method"

[tool.ruff.lint]
select = ["E", "F"]
exclude = ["demos"]